--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
-Hello World, Online Psychology Testing website will be up soon.
-
-We look forward to serving various segments.
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Scroll Down Website</title>
+  <style>
+    /* Basic styling for full-page sections */
+    section {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 3em;
+    }
+    /* Additional styling and animations can be added here */
+  </style>
+</head>
+<body>
+  <section style="background-color: lightblue;">Section 1</section>
+  <section style="background-color: lightgreen;">Section 2</section>
+  <section style="background-color: lightcoral;">Section 3</section>
+  <!-- Add more sections as needed -->
+</body>
+</html>
