--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
   <section class="page" id="page1">
-    <img src="image1.jpg" alt="Image 1">
+    <img src="img/img1.jpg" alt="Image 1">
   </section>
 
   <section class="page" id="page2">
-    <img src="image2.jpg" alt="Image 2">
+    <img src="img/img2.jpg" alt="Image 2">
   </section>
 
   <section class="page" id="page3">Page 3</section>
