--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Scroll Down Website</title>
+  <title>Twilight Psychology PLLC</title>
   <link rel="stylesheet" type="text/css" href="styles/main.css"> <!-- Link to main CSS file -->
 </head>
 <body>
   <section class="page" id="page1">
     <img src="img/img1.jpg" alt="Image 1">
+    Psychological Testing Virtually with a Licensed Psychologist
   </section>
 
   <section class="page" id="page2">
