--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <body>
   <section class="page" id="page1">
     <img src="img/img1.jpg" alt="Image 1">
-    Psychological Testing Virtually with a Licensed Psychologist
+
+    <p>
+      Psychological Testing Virtually with a Licensed Psychologist
+    </p>
   </section>
 
   <section class="page" id="page2">
@@ -19,5 +22,10 @@
   <section class="page" id="page4">Page 4</section>
   
   <script src="scripts/main.js"></script> <!-- Link to main JavaScript file -->
+
+  <footer>
+    <p>&copy; 2023 Your Company | <a href="privacy.html">Privacy Policy</a></p>
+  </footer>
+  
 </body>
 </html>
