--- a/index.html
+++ b/index.html
@@ -1,31 +1,106 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Twilight Psychology PLLC</title>
-  <link rel="stylesheet" type="text/css" href="styles/main.css"> <!-- Link to main CSS file -->
-</head>
-<body>
-  <section class="page" id="page1">
-    <img src="img/img1.jpg" alt="Image 1">
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-    <p>
-      Psychological Testing Virtually with a Licensed Psychologist
-    </p>
-  </section>
+    <title>Twilight Psychology PLLC</title>
 
-  <section class="page" id="page2">
-    <img src="img/img2.jpg" alt="Image 2">
-  </section>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
 
-  <section class="page" id="page3">Page 3</section>
-  
-  <section class="page" id="page4">Page 4</section>
-  
-  <script src="scripts/main.js"></script> <!-- Link to main JavaScript file -->
+    <!-- Custom CSS for the '3 Col Portfolio' Template -->
+    <link href="css/3-col-portfolio.css" rel="stylesheet">
+  </head>
 
-  <footer>
-    <p>&copy; 2023 Your Company | <a href="privacy.html">Privacy Policy</a></p>
-  </footer>
-  
-</body>
+  <body>
+
+    <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="https://twilightpsychology.online">Twilight Psychology</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="#about">Meet Dr. Cornett</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container -->
+    </nav>
+
+    <div class="container">
+
+      <div class="row">
+
+        <div class="col-lg-12">
+          <h1 class="page-header">3 Col Portfolio <small>Showcase Your Work</small></h1>
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-4 portfolio-item">
+          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
+          <h3><a href="#project-link">Project Name</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        </div>
+
+        <div class="col-md-4 portfolio-item">
+          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
+          <h3><a href="#project-link">Project Name</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        </div>
+
+        <div class="col-md-4 portfolio-item">
+          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
+          <h3><a href="#project-link">Project Name</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        </div>
+
+      </div>
+
+      <hr>
+
+      <div class="row text-center">
+
+      </div>
+
+    </div><!-- /.container -->
+
+    <div class="container">
+
+      <hr>
+
+      <footer>
+        <div class="row">
+          <div class="col-lg-12">
+            <p>Copyright &copy; Company <span id="getCurrentDate"></span></p>
+          </div>
+        </div>
+      </footer>
+      
+    </div><!-- /.container -->
+
+    <!-- JavaScript -->
+    <script src="js/jquery-1.10.2.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script type="text/javascript">
+      var dt = new Date();
+      document.getElementById('getCurrentDate').innerHTML = dt.getFullYear();
+    </script>
+  </body>
+
 </html>
