--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="https://twilightpsychology.online">Twilight Psychology</a>
+          <a class="navbar-brand" href="https://www.psychologytesting.online">Twilight Psychology</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
