--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
     <title>Twilight Psychology PLLC</title>
 
-    <!-- Bootstrap core CSS -->
+    <!-- core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom CSS for the '3 Col Portfolio' Template -->
-    <link href="css/3-col-portfolio.css" rel="stylesheet">
+    <!-- Custom CSS Template -->
+    <link href="css/main.css" rel="stylesheet">
   </head>
 
   <body>
