--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">3 Col Portfolio <small>Showcase Your Work</small></h1>
+          <h1 class="page-header">A Select Testing Services</h1>
         </div>
 
       </div>
@@ -54,20 +54,20 @@
 
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <h3><a href="#project-link">Autism</a></h3>
+          <p>Autism online testing is now available.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <h3><a href="#project-link">ADHD</a></h3>
+          <p>ADHD testing is now available online.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <h3><a href="#project-link">Intellectual Disabilities</a></h3>
+          <p>Intellectual disability testing is now available online.</p>
         </div>
 
       </div>
@@ -87,7 +87,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; Company <span id="getCurrentDate"></span></p>
+            <p>Copyright &copy; Twilight Psychology PLLC <span id="getCurrentDate"></span></p>
           </div>
         </div>
       </footer>
