add meta description

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="
+      Our online psychology testing services offer comprehensive assessments for conditions such as autism, ADHD, bipolar disorder, 
+      and intellectual disabilities. Discover how our therapy and testing services can help you or your loved ones get the 
+      support they need.
+      ">
+    <meta name="author" content="Twilight Psychology PLLC">
 
     <title>Twilight Psychology PLLC</title>
 
