--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Psychology, Therapy, ADHD, Testing, Online">
     <meta name="description" content="
       Our online psychology testing services offer comprehensive assessments for conditions such as autism, ADHD, bipolar disorder, 
       and intellectual disabilities. Discover how our therapy and testing services can help you or your loved ones get the 
-      support they need.
-      ">
+      support they need.">
     <meta name="author" content="Twilight Psychology PLLC">
-
     <title>Twilight Psychology PLLC</title>
-
     <!-- core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-
     <!-- Custom CSS Template -->
     <link href="css/main.css" rel="stylesheet">
   </head>
 
+  
   <body>
-
     <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
         <div class="navbar-header">
