--- a/index.html
+++ b/index.html
@@ -44,15 +44,12 @@
     <div class="container">
 
       <div class="row">
-
         <div class="col-lg-12">
-          <h1 class="page-header">A Select Testing Services</h1>
+          <h1 class="page-header">Select Testing Services</h1>
         </div>
-
       </div>
 
       <div class="row">
-
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
           <h3><a href="#project-link">Autism</a></h3>
@@ -82,8 +79,7 @@
             <p>Copyright &copy; Twilight Psychology PLLC <span id="getCurrentDate"></span></p>
           </div>
         </div>
-      </footer>
-      
+      </footer>   
     </div><!-- /.container -->
 
     <!-- JavaScript -->
