--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       Our online psychology testing services offer comprehensive assessments for conditions such as autism, ADHD, bipolar disorder, 
       and intellectual disabilities. Discover how our therapy and testing services can help you or your loved ones get the 
       support they need.">
-    <meta name="author" content="Twilight Psychology PLLC">
-    <title>Twilight Psychology PLLC</title>
+    <meta name="author" content="Twilight Psychology, PLLC">
+    <title>Twilight Psychology, PLLC</title>
     <!-- core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Custom CSS Template -->
@@ -76,7 +76,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; Twilight Psychology PLLC <span id="getCurrentDate"></span></p>
+            <p>Copyright &copy; Twilight Psychology, PLLC <span id="getCurrentDate"></span></p>
           </div>
         </div>
       </footer>   
