--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       and intellectual disabilities. Discover how our therapy and testing services can help you or your loved ones get the 
       support they need.">
     <meta name="author" content="Twilight Psychology, PLLC">
-    <title>Twilight Psychology, PLLC</title>
+    <title>Online Psychology Testing Services At Twilight Psychology, PLLC</title>
     <!-- core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Custom CSS Template -->
@@ -18,6 +18,7 @@
 
   
   <body>
+  <header class = header>
     <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -40,6 +41,7 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
     </nav>
+  </header>
 
     <div class="container">
 
