--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       and intellectual disabilities. Discover how our therapy and testing services can help you or your loved ones get the 
       support they need.">
     <meta name="author" content="Twilight Psychology, PLLC">
-    <title>Online Psychology Testing Services At Twilight Psychology, PLLC</title>
+    <title>Twilight Psychology, PLLC</title>
     <!-- core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Custom CSS Template -->
