--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
           <a class="navbar-brand" href="https://www.psychologytesting.online">Twilight Psychology</a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
             <li><a href="#about">Meet Dr. Cornett</a></li>
@@ -44,7 +43,6 @@
   </header>
 
     <div class="container">
-
       <div class="row">
         <div class="col-lg-12">
           <h1 class="page-header">Select Testing Services</h1>
@@ -69,7 +67,6 @@
           <h3><a href="#project-link">Intellectual Disabilities</a></h3>
           <p>Intellectual disability testing is now available online.</p>
         </div>
-
       </div>
     </div><!-- /.container -->
 
@@ -78,7 +75,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; Twilight Psychology, PLLC <span id="getCurrentDate"></span></p>
+            <p> &copy; COPYRIGHT<span id="getCurrentDate"></span>TWILIGHT PSYCHOLOGY, PLLC.</p>
           </div>
         </div>
       </footer>   
