--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       and intellectual disabilities. Discover how our therapy and testing services can help you or your loved ones get the 
       support they need.">
     <meta name="author" content="Twilight Psychology, PLLC">
-    <title>Twilight Psychology, PLLC</title>
+    <title> Online Psych Assessments by Heather Cornett, PhD, LP </title>
     <!-- core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Custom CSS Template -->
@@ -50,20 +50,20 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
+        <div class="col-md-3 portfolio-item">
+          <a href="#autism-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
           <h3><a href="#project-link">Autism</a></h3>
           <p>Autism online testing is now available.</p>
         </div>
 
-        <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
+        <div class="col-md-3 portfolio-item">
+          <a href="#adhd-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
           <h3><a href="#project-link">ADHD</a></h3>
           <p>ADHD testing is now available online.</p>
         </div>
 
-        <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
+        <div class="col-md-3 portfolio-item">
+          <a href="#id-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
           <h3><a href="#project-link">Intellectual Disabilities</a></h3>
           <p>Intellectual disability testing is now available online.</p>
         </div>
@@ -75,7 +75,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p> &copy; COPYRIGHT<span id="getCurrentDate"></span>TWILIGHT PSYCHOLOGY, PLLC.</p>
+            <p> &copy; COPYRIGHT <span id="getCurrentDate"></span> TWILIGHT PSYCHOLOGY, PLLC.</p>
           </div>
         </div>
       </footer>   
