add section names

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       and intellectual disabilities. Discover how our therapy and testing services can help you or your loved ones get the 
       support they need.">
     <meta name="author" content="Twilight Psychology, PLLC">
-    <title> Online Psych Assessments by Heather Cornett, PhD, LP </title>
+    <title> Online Assessments at Twilight Pscyhology </title>
     <!-- core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Custom CSS Template -->
@@ -41,7 +41,9 @@
       </div><!-- /.container -->
     </nav>
   </header>
+  <div id="#top"></div>
 
+  <section id="home">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -50,25 +52,26 @@
       </div>
 
       <div class="row">
-        <div class="col-md-3 portfolio-item">
+        <div class="col-md-4 portfolio-item">
           <a href="#autism-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
           <h3><a href="#project-link">Autism</a></h3>
           <p>Autism online testing is now available.</p>
         </div>
 
-        <div class="col-md-3 portfolio-item">
+        <div class="col-md-4 portfolio-item">
           <a href="#adhd-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
           <h3><a href="#project-link">ADHD</a></h3>
           <p>ADHD testing is now available online.</p>
         </div>
 
-        <div class="col-md-3 portfolio-item">
+        <div class="col-md-4 portfolio-item">
           <a href="#id-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
           <h3><a href="#project-link">Intellectual Disabilities</a></h3>
           <p>Intellectual disability testing is now available online.</p>
         </div>
       </div>
     </div><!-- /.container -->
+    </section>
 
     <div class="container">
       <hr>
@@ -82,8 +85,7 @@
     </div><!-- /.container -->
 
     <script type="text/javascript">
-      var dt = new Date();
-      document.getElementById('getCurrentDate').innerHTML = dt.getFullYear();
+      document.getElementById('getCurrentDate').innerHTML = (new Date()).getFullYear();
     </script>
   </body>
 
