add more sections

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="page-header">Select Testing Services</h1>
+          <h2 class="page-header">Select Testing Services</h2>
         </div>
       </div>
 
@@ -71,22 +71,47 @@
         </div>
       </div>
     </div><!-- /.container -->
-    </section>
+  </section>
 
+  <section id="aboutUs">
+  <div class="container">
+    <div class="heading text-center"> 
+      <h2>About Us</h2>
+      <p>At lorem Ipsum available, but the majority have suffered alteration in some form by injected humour.</p>
+    </div>
+    
+    <div class="row feature design">
+      <div class="area1 columns right">
+        <h3>Clean and Modern Design.</h3>
+        <p>Lorem ipsum dolor sit amet, ea eum labitur scsstie percipitoleat fabulas complectitur deterruisset at pro. Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
+          Nec et jority have suffered alteration. </p>
+        <p>Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
+          Nec et amet vidisse mentitumsstie percipitoleat fabulas. </p>
+          <a href="#" class="btn">Download Apps</a> 
+      </div>
+      <div class="area2 columns feature-media left"> <img src="images/feature-img-1.png" alt="" width="100%"> </div>
+    </div>
+    
+  </div>
+  </section>
+
+  <section class="copyright">
     <div class="container">
       <hr>
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p> &copy; COPYRIGHT <span id="getCurrentDate"></span> TWILIGHT PSYCHOLOGY, PLLC.</p>
+            <p> &copy; COPYRIGHT <span id="getCurrentDate"></span> TWILIGHT PSYCHOLOGY, PLLC. ALL RIGHTS RESERVED.</p>
           </div>
         </div>
       </footer>   
     </div><!-- /.container -->
+  </section>
+  <a href="#top" class="topHome"><i class="fa fa-chevron-up fa-2x"></i></a>
 
-    <script type="text/javascript">
-      document.getElementById('getCurrentDate').innerHTML = (new Date()).getFullYear();
-    </script>
+  <script type="text/javascript">
+    document.getElementById('getCurrentDate').innerHTML = (new Date()).getFullYear();
+  </script>
   </body>
 
 </html>
