--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
     </div><!-- /.container -->
   </section>
 
+  <script src="js/jquery-1.10.2.js"></script>
+  <script src="js/bootstrap.js"></script>
   <script type="text/javascript">
     document.getElementById('getCurrentDate').innerHTML = (new Date()).getFullYear();
   </script>
