change to files

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-            <li class="active" id="firstLink"><a href="#home" class="scroll-link">Home</a></li>
-            <li><a href="#services" class="scroll-link">Services</a></li>
-            <li><a href="#about" class="scroll-link">About</a></li>
-            <li><a href="#contact" class="scroll-link">Contact</a></li>
+            <li><a href="#home" class="scroll-link">Home</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
