fix spelling issues.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       and intellectual disabilities. Discover how our therapy and testing services can help you or your loved ones get the 
       support they need.">
     <meta name="author" content="Twilight Psychology, PLLC">
-    <title> Online Assessments at Twilight Pscyhology </title>
+    <title> Online Assessments at Twilight Psychology </title>
     <!-- core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Custom CSS Template -->
@@ -92,7 +92,7 @@
       <hr>
       <div class="area1 columns right"> 
         <h2>Provider</h2>
-        <p>Dr. Heather Cornett is a Kentucky native and is able to provide various psychological testing services online.</p>
+        <p>Dr. Heather Cornett is a Kentucky native and can provide various psychological testing services online.</p>
       </div>
     
       <div class="row feature design">
@@ -111,7 +111,7 @@
       <hr>
       <div class="area1 columns right"> 
         <h2>Contact Us</h2>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered.</p>
+        <p>Please use the contact form provided below to schedule an appointment with me.</p>
       </div>
     </div>
   </section>
