--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <meta name="theme-color" content="#ffffff">
   </head>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-THTSMV9MTP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-THTSMV9MTP');
+  </script>
+
   
   <body>
   <header class = header>
