--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Psychology, Therapy, ADHD, Testing, Online">
     <meta name="description" content="
-      Our online psychology testing services offer comprehensive assessments for conditions such as autism, ADHD, bipolar disorder, 
-      and intellectual disabilities. Discover how our therapy and testing services can help you or your loved ones get the 
-      support they need.">
-    <meta name="author" content="Twilight Psychology, PLLC">
-    <title> Online Assessments at Twilight Psychology </title>
+      Our online psychology testing website offers assessments for various conditions such as autism, ADHD, bipolar disorder, 
+      and intellectual disabilities.">
+    <meta name="author" content="TP-KY">
+    <title> Free Online Psychology Assessments </title>
     <!-- core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Custom CSS Template -->
     <link href="css/main.css" rel="stylesheet">
-    <!-- Add favicon -->
+    <!-- Add favicon>
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -22,6 +21,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <-->
   </head>
 
   <!-- Google tag (gtag.js) -->
@@ -53,7 +53,6 @@
             <li><a href="#home" class="scroll-link">Home</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
@@ -63,12 +62,10 @@
   <section id="home">
     <div class="container">
       <ol>
-        <li> Various testing available with psychologist</li>
+        <li> Various testing available online</li>
         <li> Affordable, Self Pay</li>
-        <li> KY native, PSYPACT all over country</li>
         <li> Experienced in areas such as ASD and others </li>
         <li> Online </li>
-        <li> Flexible times and weekends </li>
       </ol>
     </div>
   </section>
@@ -86,19 +83,19 @@
         <div class="col-md-4 portfolio-item">
           <a href="#autism-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
           <h3><a href="#project-link">Autism</a></h3>
-          <p>Autism online testing is now available.</p>
+          <p>lorem ipsum</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
           <a href="#adhd-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
           <h3><a href="#project-link">ADHD</a></h3>
-          <p>ADHD testing is now available online.</p>
+          <p>lorem ipsum</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
           <a href="#id-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
           <h3><a href="#project-link">Intellectual Disabilities</a></h3>
-          <p>Intellectual disability testing is now available online.</p>
+          <p>lorem ipsum</p>
         </div>
       </div>
     </div><!-- /.container -->
@@ -109,7 +106,7 @@
       <hr>
       <div class="area1 columns right"> 
         <h2>Provider</h2>
-        <p>Dr. Heather Cornett is a Kentucky native and can provide various psychological testing services online.</p>
+        <p> Lorem ipsum other images</p>
       </div>
     
       <div class="row feature design">
@@ -123,24 +120,13 @@
     </div><!-- container -->
   </section>
 
-  <section id="contact">
-    <div class="container">
-      <hr>
-      <div class="area1 columns right"> 
-        <h2>Contact Us</h2>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfzQKHXknCVCL6RiaeQlDPHIsVaeA59ORGLcWc4xzvHZhdI3Q/viewform?embedded=true" 
-          width="640" height="1056" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-      </div>
-    </div>
-  </section>
-
   <section class="copyright">
     <div class="container">
       <hr>
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p> &copy; <span id="getCurrentDate"></span> TWILIGHT PSYCHOLOGY, PLLC. ALL RIGHTS RESERVED.</p>
+            <p> &copy; <span id="getCurrentDate"></span> Psychology Testing Online. ALL RIGHTS RESERVED.</p>
           </div>
         </div>
       </footer>   
