--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="https://www.psychologytesting.online">Twilight Psychology</a>
+          <a class="navbar-brand" href="https://www.psychologytesting.online">Psychology Testing Online</a>
         </div>
 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
