--- a/index.html
+++ b/index.html
@@ -61,11 +61,23 @@
 
   <section id="home">
     <div class="container">
-      The website for Twilight Psychology has moved to <a href="https://www.twilightpsychology.com">www.twilightpsychology.com</a>
-      For services offered online at Twilight Psychology PLLC, please <a href="https://www.twilightpsychology.com/services/">
-        Click Here!</a>
+      <p> Hello There.</p>
     </div>
   </section>
+
+
+  <section id="services">
+    <div class="container">
+      <p>The website for Twilight Psychology has moved to <a href="https://www.twilightpsychology.com">www.twilightpsychology.com</a>
+      </p>
+
+      <p>
+        For services offered online at Twilight Psychology PLLC, please <a href="https://www.twilightpsychology.com/services/">
+        Click Here!</a>
+      </p>
+    </div>
+  </section>
+
     
   <section class="copyright">
     <div class="container">
